# src/routes/v1/article.route.js
@@ -39,4 +39,32 @@ router.patch(
   RatingsController.rateArticles
 );
 
+router.post(
+  '/',
+  authMiddleware,
+  validateRequest,
+  ArticleController.createArticle
+);
+
+router.get(
+  '/:articleId',
+  validateRequest,
+  ArticleController.fetchSpecificArticle
+);
+
+router.delete(
+  '/:articleId',
+  authMiddleware,
+  validateRequest,
+  ArticleController.deleteArticle
+);
+
+router.put(
+  '/:articleId',
+  authMiddleware,
+  validateRequest,
+  articleMiddleware,
+  ArticleController.updateOneArticle
+);
+
 export default router;
