# swagger.yaml
@@ -304,7 +304,132 @@ paths:
                   $ref: "#/components/schemas/response"      
         400:          
           description: 'failed operation'  
-
+    post:
+      tags:
+        - 'Articles'
+      summary: Create an article on errorswag
+      description: Create an article
+      operationId: CreateArticle
+      parameters:
+        - in: query
+          name: body
+          description: Information to be sent to create an article
+          required: true
+          schema:
+            type: object
+            required:
+              - title
+              - description
+              - body
+              - image
+            properties:
+              title:
+                type: string
+              description:
+                type: string
+              body:
+                type: string
+              image:
+                type: string
+      responses:
+        '201':
+          description: Article successfully created
+        '400':
+          description: Bad request
+        '401':
+          description: Not authorized to create an article
+        '500':
+          description: Server error
+      security:
+        - api_key: []
+  '/articles/:articleId':
+    get:
+      tags:
+        - 'Articles'
+      summary: Get articles
+      description: Get articles
+      operationId: GetArticle
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: articleId
+          required: true
+          type: number
+      responses:
+        '200':
+          description: Article successfully fetched
+        '404':
+          description: Article not found
+        '500':
+          description: Server error
+    delete:
+      tags:
+        - 'Articles'
+      summary: Delete article
+      description: Delete article
+      operationId: DeleteArticle
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: articleId
+          required: true
+          type: number
+      responses:
+        '200':
+          description: Article successfully deleted
+        '401':
+          description: Not authorized to delete article
+        '404':
+          description: Article not found
+        '500':
+          description: Server error
+      security:
+        - api_key: []
+    put:
+      tags:
+        - 'Articles'
+      summary: Update an article
+      description: Update an article
+      operationId: UpdateArticle
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: articleId
+          required: true
+          type: number
+        - in: body
+          name: body
+          description: Information to be sent to create an article
+          required: true
+          schema:
+            type: object
+            required:
+              - title
+              - description
+              - body
+            properties:
+              title:
+                type: string
+              description:
+                type: string
+              body:
+                type: string
+      responses:
+        '200':
+          description: Article successfully updated
+        '400':
+          description: Bad request
+        '401':
+          description: Not authorized to update an article
+        '500':
+          description: Server error
+      security:
+        - api_key: []
   /articles/{articleId}/ratings:
     patch: 
       tags: 
